--- a/class/main.css
+++ b/class/main.css
@@ -460,10 +460,6 @@ a:link, a:visited, a:hover, a:active {
     font-size: 20px;
 }
 
-/* .backButtonLong {
-    width: 369px;
-} */
-
 .otherButton {
     font-size: 15px;
     padding-top: 2px;
@@ -721,7 +717,6 @@ a:link, a:visited, a:hover, a:active {
 }
 
 .progressBarTable td {
-    /* height: 9.5px; */
     height: 19px;
     width: 9.5px;
 }
@@ -882,7 +877,7 @@ a:link, a:visited, a:hover, a:active {
 
 #studentPopInfo {
     width: 200px;
-    height: 150px;
+    min-height: 150px;
 }
 
 #studentPopInfo p {
