--- a/class/main.css
+++ b/class/main.css
@@ -833,14 +833,14 @@ a:link, a:visited, a:hover, a:active {
     margin: 15px auto;
 }
 
-#studentData {
+#studentProperties {
     text-align: left;
     font-size: 20px;
     font-family: 'Courier New', Courier, monospace;
     color: #72AED3;
 }
 
-#studentData p {
+#studentProperties p {
     margin-bottom: 1px;
     margin-top: 1px;
 }
@@ -916,7 +916,7 @@ a:link, a:visited, a:hover, a:active {
     margin: 15px auto;
 }
 
-#studentData span {
+#studentProperties span {
     color: white;
 }
 
