--- a/class/main.css
+++ b/class/main.css
@@ -358,10 +358,6 @@ a:link, a:visited, a:hover, a:active {
     flex-wrap: wrap;
 }
 
-#pwdFlexDiv {
-    justify-content: space-around;
-}
-
 #attCount, #attArchiveCount {
     font-size: 50px;
     margin: 0px;
@@ -660,10 +656,11 @@ a:link, a:visited, a:hover, a:active {
 }
 
 .textInputField6 {
-    width: 50px;
+    width: 200px;
     height: 50px;
-    margin: 0px 20px;
-    font-size: 40px;
+    margin-top: 30px;
+    margin-bottom: 35px;
+    font-size: 30px;
 }
 
 
