--- a/class/main.css
+++ b/class/main.css
@@ -469,7 +469,7 @@ a:link, a:visited, a:hover, a:active {
 }
 
 .sortValues {
-    color: #3478F6 !important;
+    color: yellow;
     font-size: 20px !important;
 }
 
