--- a/class/main.css
+++ b/class/main.css
@@ -61,6 +61,18 @@ a:link, a:visited, a:hover, a:active {
     display: none;
 }
 
+.lb {
+    border: 1px solid white;
+    margin-bottom: 20px;
+    padding-left: 10px;
+}
+
+.lbTitle {
+    font-size: 25px;
+    color: #3478F6;
+    text-align: center !important;
+}
+
 #archiveBanner {
     margin: 0px 20px 0px 20px;
     padding: 0px;
@@ -130,6 +142,12 @@ a:link, a:visited, a:hover, a:active {
     color: #3478F6;
     border-bottom: 2px solid #333;
     padding-bottom: 5px;
+}
+
+#customSortListLabel {
+    font-size: 20px;
+    color: #3478F6;
+    margin: 0px auto 10px auto;
 }
 
 #absentLabel {
@@ -203,7 +221,7 @@ a:link, a:visited, a:hover, a:active {
     padding-top: 6px;
     border: 2px solid #ddd;
     background-color: black;
-    border-radius: 25px;
+    border-radius: 20px;
     margin: 20px auto;
 }
 
@@ -485,6 +503,10 @@ a:link, a:visited, a:hover, a:active {
     justify-content: center;
 }
 
+#genderListContainer {
+    border-top: 1px solid #333;
+}
+
 #gamePointButtonsContainer {
     display: flex;
     flex-wrap: wrap;
@@ -499,6 +521,12 @@ a:link, a:visited, a:hover, a:active {
 #team1ListDiv, #boysListDiv, #boysArchiveListDiv {
     padding-left: 10px;
     word-wrap: break-word;
+}
+
+#boysListP, #girlsListP {
+    color: yellow;
+    font-size: 25px;
+    margin: 10px auto 10px auto;
 }
 
 #team2ListDiv, #girlsListDiv, #girlsArchiveListDiv {
