--- a/class/main.css
+++ b/class/main.css
@@ -487,7 +487,7 @@ a:link, a:visited, a:hover, a:active {
 }
 
 .sortValues {
-    color: yellow;
+    color: #bbb;
     font-size: 20px !important;
 }
 
