--- a/class/main.css
+++ b/class/main.css
@@ -487,14 +487,9 @@ a:link, a:visited, a:hover, a:active {
 }
 
 .sortValues {
+    margin: 0px 0px 20px 0px;
     color: #bbb;
     font-size: 20px !important;
-}
-
-.noteText {
-    margin: 0px 0px 20px 0px;
-    font-size: 16px;
-    color: orange;
 }
 
 #teamListContainer, #genderListContainer, #attListContainer, #attArchiveListContainer {
@@ -524,7 +519,7 @@ a:link, a:visited, a:hover, a:active {
 }
 
 #boysListP, #girlsListP {
-    color: yellow;
+    color: #bbb;
     font-size: 25px;
     margin: 10px auto 10px auto;
 }
@@ -788,7 +783,7 @@ a:link, a:visited, a:hover, a:active {
 }
 
 #rankProgressTableP, #totalProgressTableP, #asProgressTableP, #mvProgressTableP, #attProgressTableP, #totalParticipationTableP {
-    margin-top: 35px;
+    margin-top: 25px;
     margin-bottom: 5px;
 }
 
